# ROS_Voicer

./: README.md
Jaco_Voice/: Jaco_README.md  debug.py  gui.py  jacoapp.py  jacogui.py
ROS_Voicer_Packages/utari10_jackal/: README.md
ROS_Voicer_Packages/utari10_jackal/ROS_Voicer_Python_Files/: picovoicer.py  pose_action_client.py  robotmove.py  ros_voicer.py  (+4 more)
TurtleBot_Voice/: Turtlebot_README.md  function.py  main.py
TurtleBot_Voice/Audio/: Stains_of_Time.mid  soundtest.py
catkin_ws/: Readme.md
utari10_jackal/: CMakeLists.txt  README.md  package.xml
utari10_jackal/ROS_Voicer_Python_Files/: picovoicer.py  ros_voicer.py  shared_instances.py  zedcam.py
utari10_jackal/ROS_Voicer_Python_Files/Picovoice/Porcupine/: Hey-Jackson_en_linux_v3_0_0.ppn
utari10_jackal/ROS_Voicer_Python_Files/Picovoice/Rhino/: arm_move_en_linux.rhn
utari10_jackal/launch/: jackal_base.launch  jackal_description.launch  utari10_jackal.launch  utari10_moveit.launch
utari10_jackal/urdf/: j2n6s300.xacro  jackal_description.urdf.xacro
utari10_jackal_moveit_config/: CMakeLists.txt  package.xml
utari10_jackal_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  sensors_3d.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
utari10_jackal_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
(+14 files in other folders)
