<?xml version="1.0"?>
<package>
	<name>utari10_jackal</name>
	<version>0.0.0</version>
	<description>A custom repository for the UTARI10 jackal complete with ZED Camera and Kinova Jaco-2 manipulator arm.</description>
	<maintainer email="code@clearpathrobotics.com">Clearpath Team</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>jackal_bringup</run_depend>
	<run_depend>jackal_description</run_depend>
</package>

